[tool.poetry]
name = "rgz-ks"
version = "0.1.0"
description = ""
authors = ["Leonid-poc <legeorg2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
tkcalendar = "^1.6.1"
lxml = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
